Resolved contrast issues with Canada wordmark and skip links

--- a/src/views/_screen.scss
+++ b/src/views/_screen.scss
@@ -26,8 +26,14 @@
 }
 
 .wb-sl {
-	background: #000;
+	background-color: #000;
 	color: #fff;
+	font-weight: 700;
+
+	&:focus {
+		color: #fff;
+		text-decoration: none;
+	}
 }
 
 #gcwu-sig {
